frontend/srcs/output.css
/* ... */
.will-change-auto {
  will-change: auto;
}

.will-change-transform {
  will-change: transform;
}

:root,.light,[data-theme="light"] {
  color-scheme: light;
  --nextui-background: 0 0% 100%;
  --nextui-foreground-50: 0 0% 98.04%;
  --nextui-foreground-100: 240 4.76% 95.88%;
  --nextui-foreground-200: 240 5.88% 90%;
  --nextui-foreground-300: 240 4.88% 83.92%;
  --nextui-foreground-400: 240 5.03% 64.9%;
  --nextui-foreground-500: 240 3.83% 46.08%;
  --nextui-foreground-600: 240 5.2% 33.92%;
  --nextui-foreground-700: 240 5.26% 26.08%;
  --nextui-foreground-800: 240 3.7% 15.88%;
  --nextui-foreground-900: 240 5.88% 10%;
  --nextui-foreground: 201.81999999999994 24.44% 8.82%;
  --nextui-divider: 0 0% 6.67%;
  --nextui-divider-opacity: 0.15;
  --nextui-focus: 212.01999999999998 100% 46.67%;
  --nextui-overlay: 0 0% 0%;
  --nextui-content1: 0 0% 100%;
  --nextui-content1-foreground: 201.81999999999994 24.44% 8.82%;
  --nextui-content2: 240 4.76% 95.88%;
  --nextui-content2-foreground: 240 3.7% 15.88%;
  --nextui-content3: 240 5.88% 90%;
  --nextui-content3-foreground: 240 5.26% 26.08%;
  --nextui-content4: 240 4.88% 83.92%;
  --nextui-content4-foreground: 240 5.2% 33.92%;
  --nextui-default-50: 0 0% 98.04%;
  --nextui-default-100: 240 4.76% 95.88%;
  --nextui-default-200: 240 5.88% 90%;
  --nextui-default-300: 240 4.88% 83.92%;
  --nextui-default-400: 240 5.03% 64.9%;
  --nextui-default-500: 240 3.83% 46.08%;
  --nextui-default-600: 240 5.2% 33.92%;
  --nextui-default-700: 240 5.26% 26.08%;
  --nextui-default-800: 240 3.7% 15.88%;
  --nextui-default-900: 240 5.88% 10%;
  --nextui-default-foreground: 0 0% 0%;
  --nextui-default: 240 4.88% 83.92%;
  --nextui-primary-50: 212.5 92.31% 94.9%;
  --nextui-primary-100: 211.84000000000003 92.45% 89.61%;
  --nextui-primary-200: 211.84000000000003 92.45% 79.22%;
  --nextui-primary-300: 212.24 92.45% 68.82%;
  --nextui-primary-400: 212.14 92.45% 58.43%;
  --nextui-primary-500: 212.01999999999998 100% 46.67%;
  --nextui-primary-600: 212.14 100% 38.43%;
  --nextui-primary-700: 212.24 100% 28.82%;
  --nextui-primary-800: 211.84000000000003 100% 19.22%;
  --nextui-primary-900: 211.84000000000003 100% 9.61%;
  --nextui-primary-foreground: 0 0% 100%;
  --nextui-primary: 212.01999999999998 100% 46.67%;
  --nextui-secondary-50: 270 61.54% 94.9%;
  --nextui-secondary-100: 270 59.26% 89.41%;
  --nextui-secondary-200: 270 59.26% 78.82%;
  --nextui-secondary-300: 270 59.26% 68.24%;
  --nextui-secondary-400: 270 59.26% 57.65%;
  --nextui-secondary-500: 270 66.67% 47.06%;
  --nextui-secondary-600: 270 66.67% 37.65%;
  --nextui-secondary-700: 270 66.67% 28.24%;
  --nextui-secondary-800: 270 66.67% 18.82%;
  --nextui-secondary-900: 270 66.67% 9.41%;
  --nextui-secondary-foreground: 0 0% 100%;
  --nextui-secondary: 270 66.67% 47.06%;
  --nextui-success-50: 146.66999999999996 64.29% 94.51%;
  --nextui-success-100: 145.71000000000004 61.4% 88.82%;
  --nextui-success-200: 146.2 61.74% 77.45%;
  --nextui-success-300: 145.78999999999996 62.57% 66.47%;
  --nextui-success-400: 146.01 62.45% 55.1%;
  --nextui-success-500: 145.96000000000004 79.46% 43.92%;
  --nextui-success-600: 146.01 79.89% 35.1%;
  --nextui-success-700: 145.78999999999996 79.26% 26.47%;
  --nextui-success-800: 146.2 79.78% 17.45%;
  --nextui-success-900: 145.71000000000004 77.78% 8.82%;
  --nextui-success-foreground: 0 0% 0%;
  --nextui-success: 145.96000000000004 79.46% 43.92%;
  --nextui-warning-50: 54.55000000000001 91.67% 95.29%;
  --nextui-warning-100: 37.139999999999986 91.3% 90.98%;
  --nextui-warning-200: 37.139999999999986 91.3% 81.96%;
  --nextui-warning-300: 36.95999999999998 91.24% 73.14%;
  --nextui-warning-400: 37.00999999999999 91.26% 64.12%;
  --nextui-warning-500: 37.02999999999997 91.27% 55.1%;
  --nextui-warning-600: 37.00999999999999 74.22% 44.12%;
  --nextui-warning-700: 36.95999999999998 73.96% 33.14%;
  --nextui-warning-800: 37.139999999999986 75% 21.96%;
  --nextui-warning-900: 37.139999999999986 75% 10.98%;
  --nextui-warning-foreground: 0 0% 0%;
  --nextui-warning: 37.02999999999997 91.27% 55.1%;
  --nextui-danger-50: 339.13 92% 95.1%;
  --nextui-danger-100: 340 91.84% 90.39%;
  --nextui-danger-200: 339.3299999999999 90% 80.39%;
  --nextui-danger-300: 339.11 90.6% 70.78%;
  --nextui-danger-400: 339 90% 60.78%;
  --nextui-danger-500: 339.20000000000005 90.36% 51.18%;
  --nextui-danger-600: 339 86.54% 40.78%;
  --nextui-danger-700: 339.11 85.99% 30.78%;
  --nextui-danger-800: 339.3299999999999 86.54% 20.39%;
  --nextui-danger-900: 340 84.91% 10.39%;
  --nextui-danger-foreground: 0 0% 100%;
  --nextui-danger: 339.20000000000005 90.36% 51.18%;
  --nextui-divider-weight: 1px;
  --nextui-disabled-opacity: .5;
  --nextui-font-size-tiny: 0.75rem;
  --nextui-font-size-small: 0.875rem;
  --nextui-font-size-medium: 1rem;
  --nextui-font-size-large: 1.125rem;
  --nextui-line-height-tiny: 1rem;
  --nextui-line-height-small: 1.25rem;
  --nextui-line-height-medium: 1.5rem;
  --nextui-line-height-large: 1.75rem;
  --nextui-radius-small: 8px;
  --nextui-radius-medium: 12px;
  --nextui-radius-large: 14px;
  --nextui-border-width-small: 1px;
  --nextui-border-width-medium: 2px;
  --nextui-border-width-large: 3px;
  --nextui-box-shadow-small: 0px 0px 5px 0px rgb(0 0 0 / 0.02), 0px 2px 10px 0px rgb(0 0 0 / 0.06), 0px 0px 1px 0px rgb(0 0 0 / 0.3);
  --nextui-box-shadow-medium: 0px 0px 15px 0px rgb(0 0 0 / 0.03), 0px 2px 30px 0px rgb(0 0 0 / 0.08), 0px 0px 1px 0px rgb(0 0 0 / 0.3);
  --nextui-box-shadow-large: 0px 0px 30px 0px rgb(0 0 0 / 0.04), 0px 30px 60px 0px rgb(0 0 0 / 0.12), 0px 0px 1px 0px rgb(0 0 0 / 0.3);
  --nextui-hover-opacity: .8;
}
/* ... */

